# FFmpegAndroid

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/ws/ffmpeg/ffmpegandroid/: MainActivity.java
app/src/main/java/com/ws/ffmpeg/ffmpegandroid/temp/: BaseMessage.java  PushLinker.java  PushServiceCallBack.java  SocialNetworkSystem.java
app/src/main/java/com/ws/ffmpeg/ffmpegandroid/temp/gtpush/: GTMessage.java  GTPushInit.java  GTReceiveMessageService.java
app/src/main/java/com/ws/ffmpeg/ffmpegandroid/temp/pushmanager/: IPushInit.java  PushManager.java
ffmpegandroidaddmusic/src/main/cpp/: native-lib.cpp
ffmpegandroidaddmusic/src/main/java/com/ws/ffmpegandroidaddmusic/: MainActivity.java
ffmpegandroidplayer/: CMakeLists.txt
ffmpegandroidplayer/src/main/: AndroidManifest.xml
ffmpegandroidplayer/src/main/cpp/: native-lib.cpp
ffmpegandroidplayer/src/main/cpp/classimpl/: Render.cpp  Render.h  render_wrapper.cpp  render_wrapper.h
ffmpegandroidplayer/src/main/cpp/test/: JavaAudioTrackWrapper.cpp  JavaAudioTrackWrapper.h  Test.cpp  Test.h
ffmpegandroidplayer/src/main/java/com/ws/ffmpegandroidplayer/: MainActivity.java
ffmpegandroidplayer/src/main/java/com/ws/ffmpegandroidplayer/my/: CustomSurfaceView.java  PlayVideoActivity.java  Render.java
ffmpegandroidplayer/src/main/java/com/ws/ffmpegandroidplayer/test/: AudioTrackWrapper.java  RecordActivity.java  TestRecordActivity.java
ffmpegandroidplayer/src/main/res/layout/: activity_main.xml  activity_play.xml  activity_record.xml
